scratch/k8s/webhook-configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: iac-verifier-webhook
webhooks:
  - name: iac-verifier.default.svc
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["configmaps"]
        scope: "Namespaced"
    clientConfig:
      service:
        name: iac-webhook-service
        namespace: default
        path: "/validate"
        port: 443
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMwekNDQWJ1Z0F3SUJBZ0lVTXlzMjJQUmhXTi84UVcwVzZGTUVUcGZVNWt3d0RRWUpLb1pJaHZjTkFRRUwKQlFBd0dURVhNQlVHQTFVRUF3d09TV0ZESUZkbFltaHZiMnNnUTBFd0hoY05Nall3T1RBek1EWXdPVFF4V2hjTgpNamN3T1RBek1EWXdPVFF4V2pBWk1SY3dGUVlEVlFRRERBNUpZVU1nVjJWaWFHOXZheUJEUVRDQ0FTSXdEUVlKCktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0NnZ0VCQU5pMm9hUERoUTA1NUwrYmcvYUxxcHArRXBnQzBvOEMKK015bGFxTnB5aTl4emNDcjM3ZWEvVGJuL3VGR1oxb2F1RDZ5NnJJQjlYbEpjMWdCSGFHNzdVdEphOVFjbVFNRgprZXUvT1FUTjN [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 10
    failurePolicy: Fail
